# python-resources

./: .gitignore  hello.py  pyproject.toml
_misc/: tensorflow_pytorch_macos_gpu.py
coursera-mlops-specialization/01-Python-Essentials-for-MLOps/module-3-python-testing/lesson1/: testing-conventions.ipynb  testing-with-pytest.ipynb
coursera-mlops-specialization/01-Python-Essentials-for-MLOps/module-4-pandas-and-numpy/lesson3/: common-array-operations.ipynb  introduction-to-arrays.ipynb  more-array-operations.ipynb
coursera-mlops-specialization/01-Python-Essentials-for-MLOps/module-5-applied-python-for-mlops/lesson1/: try-azure-ml-sp.ipynb
coursera-mlops-specialization/01-Python-Essentials-for-MLOps/module-5-applied-python-for-mlops/lesson2/: try-transformers.ipynb
coursera-mlops-specialization/01-Python-Essentials-for-MLOps/module-5-applied-python-for-mlops/lesson3/: explore-opendatasets.ipynb  requirements.txt
coursera-mlops-specialization/02-DevOps-DataOps-MLOps/: module1-resources.txt  module2-resources.txt
docker/: docker_commands.md  resources_docker.txt
resources/: resoource_links.py
src/_misc/: tensorflow_pytorch_macos_gpu.py
src/sklearn/: one_hot_encoding.py
uv/: resource_uv.ipynb  resource_uv.md
